fixing alignment for header items

--- a/src/sections/alerts-app.scss
+++ b/src/sections/alerts-app.scss
@@ -1,4 +1,6 @@
 .alerts-app {
+  h2 { margin-top: 0px !important; }
+
   .alerts-list {
     color: #333;
 
